[gd_scene load_steps=11 format=2]

[ext_resource path="res://hud/player_time/time_icon.png" type="Texture" id=1]
[ext_resource path="res://fonts/fffforwa.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://hud/player_time/time_icon_gold.png" type="Texture" id=3]
[ext_resource path="res://hud/lvl_complete/lvl_completed.gd" type="Script" id=4]
[ext_resource path="res://save_load/SaveLoadManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://hud/lvl_complete/lvlcomplete_bg.png" type="Texture" id=6]
[ext_resource path="res://hud/lvl_complete/PressAnyKeyLabel.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 2 )

[node name="LvlComplete" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -96.0
margin_right = 160.0
margin_bottom = 96.0
rect_min_size = Vector2( 320, 192 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="CenterContainer"]
margin_right = 320.0
margin_bottom = 192.0
texture = ExtResource( 6 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 43.0
margin_top = 48.0
margin_right = 277.0
margin_bottom = 144.0
rect_min_size = Vector2( 234, 96 )
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 234.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
text = "Level Complete"
valign = 1

[node name="FinishTime" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 234.0
margin_bottom = 61.0
alignment = 1
__meta__ = {
"_editor_description_": ""
}

[node name="TimeIcon" type="TextureRect" parent="CenterContainer/VBoxContainer/FinishTime"]
margin_left = 75.0
margin_right = 91.0
margin_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="TimeText" type="Label" parent="CenterContainer/VBoxContainer/FinishTime"]
margin_left = 95.0
margin_right = 159.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "00.00.00"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="BestTime" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 234.0
margin_bottom = 89.0
alignment = 1
__meta__ = {
"_editor_description_": ""
}

[node name="TimeIcon" type="TextureRect" parent="CenterContainer/VBoxContainer/BestTime"]
margin_left = 75.0
margin_right = 91.0
margin_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="TimeText" type="Label" parent="CenterContainer/VBoxContainer/BestTime"]
margin_left = 95.0
margin_right = 159.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "--.--.--"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="NewBestTime" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 97.0
margin_right = 234.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 3 )
text = "New Best Time!"
align = 1

[node name="PressAnyKeyLabel" parent="CenterContainer/VBoxContainer" instance=ExtResource( 7 )]

[node name="SaveLoadManager" parent="." instance=ExtResource( 5 )]
